// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render with completely filled placeholder 1`] = `
<DocumentFragment>
  <div
    class="customUrl"
  >
    <span>
      sulu.io/
    </span>
    <div
      class="input default left"
    >
      <input
        type="text"
        value="test1"
      />
    </div>
    <span>
      /
    </span>
    <div
      class="input default left"
    >
      <input
        type="text"
        value="test2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render with empty placeholder 1`] = `
<DocumentFragment>
  <div
    class="customUrl"
  >
    <div
      class="input default left"
    >
      <input
        type="text"
        value=""
      />
    </div>
    <span>
      .sulu.io/
    </span>
    <div
      class="input default left"
    >
      <input
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render with partially filled placeholder 1`] = `
<DocumentFragment>
  <div
    class="customUrl"
  >
    <div
      class="input default left"
    >
      <input
        type="text"
        value="test"
      />
    </div>
    <span>
      .
    </span>
    <div
      class="input default left"
    >
      <input
        type="text"
        value=""
      />
    </div>
    <span>
      .sulu.io
    </span>
  </div>
</DocumentFragment>
`;
